<resources>
    <string name="app_name">SyncCapture</string>
    <string name="app_about">About</string>


    <string name="test_capture_speed">CaptureSpeedTest</string>
    <string name="test_image_size">Image Size:%s</string>
    <string name="test_mode">Mode:%s</string>
    <string name="test_fmt">Format:%s</string>
    <string name="test_time">Test Time:</string>
    <string name="test_sendRequest">Send Request:%d</string>
    <string name="test_receivedImage">Received Image:%d</string>
    <string name="test_result">Speed(fps):%f</string>
    <string name="test_start">Start Test</string>
    <string name="test_stop">Stop Test</string>
    <string name="test_choose_mode">Choose Mode</string>
    <string name="test_mode_changed">Mode Changed,Re-test again</string>
    <string name="test_fmt_changed">Please stop test first</string>
    <string name="test_sendRequest_unknow">Send Request:-</string>
    <string name="test_receivedImage_unknow">Received Image:-</string>
    <string name="test_result_unknow">Speed(fps):-</string>

    <string name="test_fmt_jpeg">JPEG</string>
    <string name="test_fmt_raw_sensor">RAW SENSOR</string>
    <string name="test_fmt_raw_10">RAW10</string>

    <string name="start_time_record">Start Time Record</string>
    <string name="stop_time_record">Stop Time Record</string>
    <string name="listened_count">Listened count:%d</string>
    <string name="first_listened_time">BaseTime(FirstListened):\n%d</string>
    <string name="time_gap">Time Gap(CurrentTime-BaseTime):</string>
    <string name="test_audio_time_sync">AudioTimeSyncTest</string>
    <string name="time_sync_desc">Time sync desc:\nWe use the first sound time as the BaseTime,
        and subtract the BaseTime from the sound time we listen to later. Please ensure that the TimeGap
        of different devices is less than a reasonable threshold (for example, 1 millisecond).</string>
    <string name="time_sync_confirmed">Time Sync Confirmed</string>
    <string name="base_time_error">BaseTime Error</string>
    <string name="need_listened_count_more">Need to listen more times</string>
    <string name="start_capture">Start Capture</string>
    <string name="base_time">BaseTime:%d</string>
    <string name="time_esc">CaptureTime:%s</string>
    <string name="capture_number">CaptureNumber:%d</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="need_set_base_time">Please set base time first</string>
    <string name="listen_current">CurrentSound:\nTime:%1s,\nRateInHz:%2s,\nAmplitude:%3s</string>
    <string name="save_number">SaveNumber:%d</string>
    <string name="mem_info">%s</string>
    <string name="test_choose_fmt">ChooseImageFormat</string>
    <string name="test_StorageImage">Saved Images(%s):%d</string>
    <string name="test_fix_rate_fpx">Fps:%d</string>
    <string name="test_fix_request_rate">RequestRate</string>

    <string-array name="test_mode_detail">
        <item>RequestOneByOne Detail:\nSend a single request, waiting for received Image(onImageAvailable), then we do next capture</item>
        <item>RequestBurst Detail:\nSend requests list(15) at once, waiting for HAL return all the Image, then we do next capture</item>
        <item>RequestRepeating Detail:\nSend a single request as RepeatingRequest, HAL will continues return the Image until we stop it</item>
        <item>RequestFixRate Detail:\nSend a single request as Fixed Rate</item>
        <item>CaptureMultiThread Detail:\nUse 2 threads to send next requests alternately</item>
        <item>CaptureOnAhead Detail:\nAdvance the next request to the onCaptureStart callback</item>
    </string-array>


    <string name="test_StoragePath">Saved Path:\n%s</string>
    <string name="clear_image">Clear image dir</string>
    <string name="test_save_type">Save Type:%s</string>
    <string name="test_choose_save_type">Choose Save Type</string>
    <string name="test_save_type_changed">Please wait last save complete</string>
    <string name="test_3a_mode">3A Mode:%s</string>
    <string name="test_choose_3a_mode">Choose 3A mode</string>
    <string name="set_3a_parameter">Set 3A Parameter</string>
    <string name="exposure_time">ExposureTime</string>
    <string name="exposure_time_ss">SS</string>
    <string name="exposure_time_desc">ExposureTimeRange:%s</string>
    <string name="sensitivity_iso">ISO</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="sensitivity_desc">SensitivityRange:%s</string>
    <string name="input_a_value">Input</string>
    <string name="focus_distance">FocusDistance</string>
    <string name="focus_distance_af">AF</string>
    <string name="focus_distance_desc">FocusDistanceRange:%s</string>
    <string name="input_3a_parameter_err">Input 3A Parameter Error</string>
    <string name="manual_title">Manual3A</string>
    <string name="exposure_time_mic">Fine adjustment</string>
    <string name="save_3a_parameter">Save Current 3A Parameter</string>
    <string name="reset_3a_auto">Reset 3A Parameter</string>
    <string name="test_image_size_choose">Choose Image Size</string>
    <string name="test_mode_rate">Set Request Rate</string>
    <string name="test_fmt_jpeg_qu">JpegQuality:%d</string>
    <string name="test_fmt_jpeg_quality">JpegQuality</string>
    <string name="awb_title">AWB</string>
    <string name="set_device_name">Set Record Name</string>
    <string name="device_name">RecordName:%s</string>
    <string name="set_smb_config">Set Smb config</string>
    <string name="smb_usr_name">User Name:</string>
    <string name="smb_usr_pwd">Password:</string>
    <string name="smb_server_id">Smb Server IP:</string>
    <string name="smb_server_port">Smb Server Port:</string>
    <string name="smb_server_folder">Smb folder:</string>
    <string name="test_upload_smb">UploadSmb:%s</string>
</resources>