<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/baseTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/base_time" />

        <TextView
            android:id="@+id/capture_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capture_number" />

    </LinearLayout>

    <Button
        android:id="@+id/start_capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/start_capture" />

</RelativeLayout>