<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".SpeedTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/test_size"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/test_image_size"
            android:textSize="@dimen/text_size_15" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/test_solution"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/test_solution"
                android:textSize="@dimen/text_size_15" />

            <ImageView
                android:id="@+id/test_solution_select"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_chevron_right_24" />
        </RelativeLayout>

        <TextView
            android:id="@+id/test_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/test_time"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/test_send"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/test_sendRequest"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/test_receive"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/test_receivedImage"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/test_result"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/test_result"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/test_solution_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#08000000"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>


    <Button
        android:id="@+id/test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:enabled="false"
        android:text="@string/test_start"
        android:textSize="25sp" />

</RelativeLayout>